// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphPage should render with graph 1`] = `
<styled.div>
  <withRouter(renderNavigationBarWithRoutes) />
  <styled.div>
    <styled.div>
      <MapInteractionCSS
        key="root"
      >
        <styled.div>
          <Component
            scope="root"
          />
        </styled.div>
      </MapInteractionCSS>
    </styled.div>
    <Component />
  </styled.div>
</styled.div>
`;

exports[`GraphPage should render with graph without scopes 1`] = `
<styled.div>
  <withRouter(renderNavigationBarWithRoutes) />
  <styled.div>
    <styled.div>
      <p>
        No Scopes
      </p>
    </styled.div>
    <Component />
  </styled.div>
</styled.div>
`;

exports[`GraphPage should render with scope 1`] = `
<styled.div>
  <withRouter(renderNavigationBarWithRoutes) />
  <styled.div>
    <styled.div>
      <MapInteractionCSS
        key="root"
      >
        <styled.div>
          <Component
            scope="root"
          />
        </styled.div>
      </MapInteractionCSS>
    </styled.div>
    <Component />
  </styled.div>
</styled.div>
`;

exports[`GraphPage should render without graph 1`] = `
<p>
  Graph is required
</p>
`;
